--- a/assets/style.css
+++ b/assets/style.css
@@ -113,6 +113,12 @@ button {
   mix-blend-mode: difference;
   --stroke-color:white;
 }
+@media (hover: none) {
+  #facecam .svg-wrapper {
+    mix-blend-mode: normal;
+    --stroke-color:black;
+  }
+}
 #facecam svg {
   top: 0;
   left: 0;
@@ -126,10 +132,6 @@ button {
 #facecam svg polyline {
   stroke: var(--stroke-color);
   fill: none;
-  stroke-dasharray: 0px 8px;
-  stroke-dashoffset: 2px;
-  stroke-width: 2.5px;
-  stroke-linecap: round;
 }
 #facecam svg circle {
   stroke-width: 2px;
@@ -435,6 +437,7 @@ section.hero > svg {
   left: 0;
   pointer-events: none;
   opacity: 0;
+  transition: opacity 0.2s;
 }
 section.hero svg line {
   stroke: black;
@@ -1827,81 +1830,36 @@ section.tester.exact-track input[type=text], section.tester.exact-track .ibeam {
   touch-action: none;
   pointer-events: all;
   position: absolute;
-  --pupilx:50%;
-  --pupily:50%;
-  top: 120%;
-  left: 120%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   height: 48px;
-  width: 98px;
+  width: 48px;
+  background-color: white;
+  border-radius: 50%;
+  border: 1px solid black;
   opacity: 0;
   transition: opacity 0.3s;
   display: flex;
   flex-flow: row nowrap;
-  --lid:24px;
-  filter: drop-shadow(rgba(0, 0, 0, 0.3) 46px 76px 9px);
-}
-#tilt-control .eye {
-  position: relative;
-  border: 1px solid black;
-  background-color: white;
-  width: 48px;
-  min-width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  overflow: hidden;
-  margin-right: 2px;
-  box-sizing: border-box;
-  z-index: 10;
-}
-#tilt-control .eye .pupil {
-  position: absolute;
-  top: 50%;
-  left: var(--pupilx);
-  top: var(--pupily);
-  width: 22px;
-  height: 22px;
-  border-radius: 50%;
-  background-color: black;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-}
-#tilt-control .eye .eyelid {
-  background-color: white;
-  width: 100%;
-  height: 50%;
-  position: absolute;
-  left: 0;
-  z-index: 2;
-}
-#tilt-control .eye .eyelid.top {
-  top: 0;
-  border-bottom: 1px solid black;
-  transform: translateY(-24px);
-}
-#tilt-control .eye .eyelid.bottom {
-  top: 22px;
-  transform: translateY(24px);
-  height: 26px;
-  border-top: 1px solid black;
 }
 
-#tilt-control.blink .eyelid.top {
-  animation: 0.5s forwards blinkdown ease;
-}
-#tilt-control.blink .eyelid.bottom {
-  animation: 0.5s forwards blinkup ease;
+#tilt-control.jiggle {
+  animation: 0.5s forwards jiggle ease;
 }
 
-@keyframes blinkdown {
+@keyframes jiggle {
   0% {
-    transform: translateY(-24px);
+    transform: translate(-50%, -50%) translateY(0px);
   }
-  50% {
-    transform: translateY(0px);
+  25% {
+    transform: translate(-50%, -50%) translateY(20px);
+  }
+  75% {
+    transform: translate(-50%, -50%) translateY(-20px);
   }
   100% {
-    transform: translateY(-24px);
+    transform: translate(-50%, -50%) translateY(0px);
   }
 }
 @keyframes blinkup {
