--- a/assets/style.scss
+++ b/assets/style.scss
@@ -528,7 +528,8 @@ section.signs {
     position: absolute;
     // width: 100px;
     // border-bottom: 1px solid red;
-    margin-top: -$unit * 6 + 1;
+    // margin-top: -$unit * 6 + 1;
+    margin-top: 1px;
   }
   div {
     float:left;
