--- a/assets/style.css
+++ b/assets/style.css
@@ -754,6 +754,7 @@ section.signs .prosperity .inner .xs .line {
     position: relative;
     width: 100vw;
     height: 50vw;
+    padding: 16px 0;
     border-top: 1px solid;
     border-right: none;
     border-bottom: none;
@@ -1177,7 +1178,7 @@ section.signs .bowery-savings .inner p.save {
 @media (max-width: 599px) {
   section.signs .bowery-savings {
     width: 100vw;
-    height: 83.3333333333vw;
+    height: 87.5vw;
     border-top: 1px solid;
     border-right: none;
     border-bottom: 1px solid;
@@ -1195,7 +1196,7 @@ section.signs .bowery-savings .inner p.save {
     transform-origin: 0 0;
   }
   section.signs .bowery-savings .inner p.save {
-    margin-top: 2.5em;
+    margin-top: 2.75em;
   }
 }
 section.signs .nypl {
@@ -1720,6 +1721,7 @@ section.tester .text .slider-wrapper.vrot .slider {
 }
 section.tester .text .slider-wrapper .slider {
   position: absolute;
+  cursor: pointer;
   height: 16px;
   margin: 4px 0;
   background: transparent;
@@ -1738,8 +1740,20 @@ section.tester .text .slider-wrapper .slider::-webkit-slider-thumb {
   width: 15px;
   background: var(--bg);
   margin-top: -7px;
-  border: 1px solid;
+  border: 1px solid #000;
   border-radius: 50%;
+  box-shadow: none;
+  filter: none;
+}
+section.tester .text .slider-wrapper .slider::-webkit-slider-thumb:hover {
+  background-color: #000;
+}
+@media (max-width: 599px) {
+  section.tester .text .slider-wrapper .slider::-webkit-slider-thumb {
+    height: 23px;
+    width: 23px;
+    margin-top: -11px;
+  }
 }
 section.tester .text .slider-wrapper .slider::-moz-range-thumb {
   height: 16px;
@@ -1898,6 +1912,9 @@ h2.big {
   }
 }
 
+section.footer {
+  border-bottom: 0;
+}
 section.footer .text {
   float: left;
   width: 50vw;
