--- a/assets/style.scss
+++ b/assets/style.scss
@@ -101,11 +101,46 @@ button{
     font-size: $font_body;
     line-height: $font_body;
     padding: $unit $unit * 1.5 $unit $unit * 2;
+    opacity:0;
+    transition:opacity 0.3s;
+    width:184px;
+    text-align:left;
     
     .dot-dot-dot {
       text-align: left;
       display: inline-block;
+      margin-left:1px;
       width: 0.9em;
+    }
+  }
+
+  .alert span::after{
+    content:'...';
+    display: inline-block;
+    width: 0.9em;
+    animation: 1s linear infinite running dotdotdot;
+  }
+
+  @keyframes dotdotdot{
+    0%{
+      content:'';
+    }
+
+    25%{
+      content:'.';
+    }
+
+    50%{
+      content:'..';
+    }
+
+    75%{
+      content:'...';
+    }
+
+    
+    100%{
+      content:'...';
     }
   }
   
