--- a/assets/style.css
+++ b/assets/style.css
@@ -257,6 +257,27 @@ p {
   font-family: tilt-warp;
 }
 
+i.can-your {
+  display: inline-block;
+  width: 12em;
+  text-align: center;
+  animation: hrot 2.4s infinite;
+}
+
+@keyframes hrot {
+  0% {
+    font-variation-settings: "HROT" 0, "VROT" 0;
+  }
+  25% {
+    font-variation-settings: "HROT" 40, "VROT" 20;
+  }
+  75% {
+    font-variation-settings: "HROT" -40, "VROT" -20;
+  }
+  100% {
+    font-variation-settings: "HROT" 0, "VROT" 0;
+  }
+}
 /* Layouts --------------------------------------------- */
 .small-only {
   display: none;
