--- a/assets/style.scss
+++ b/assets/style.scss
@@ -245,9 +245,9 @@ i.can-your {
   display: inline-block;
   width: 12em;
   text-align: center;
-  animation: hrot $duration*12 infinite;
+  animation: hrot-vrot $duration*12 infinite;
 }
-@keyframes hrot {
+@keyframes hrot-vrot {
   0%   { font-variation-settings: 'HROT' 0,   'VROT' 0;}
   25%  { font-variation-settings: 'HROT' 40,  'VROT' 20;}
   75%  { font-variation-settings: 'HROT' -40, 'VROT' -20;}
