--- a/assets/style.scss
+++ b/assets/style.scss
@@ -254,6 +254,24 @@ i.can-your {
   100% { font-variation-settings: 'HROT' 0,   'VROT' 0;}
 }
 
+figure {
+  border-radius: 8px;
+  overflow: hidden;
+  img {
+    display: block;
+    width: 100%;
+  }
+}
+figcaption {
+  padding-top: 8px;
+  font-size: 12px;
+  line-height: 14px;
+  span {
+    display: inline-block;
+    width: 2em;
+  }
+}
+
 /* Layouts --------------------------------------------- */
 .small-only {
   display: none;
